--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,13 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.9.0",
-    "dotenv": "^16.5.0",
     "firebase": "^11.9.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
-    "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "tailwindcss": "^4.1.10"
   },
